# AoC_cpp

./: .gitignore  LICENSE  README.md
doc/: 2017_22.md  2017_23.md  2018_19.md  2018_21.md  2021_24.md  2023_21.md  2024_24.md  README.md
linux/: CMakeLists.txt  README.md
sources/: README.md
sources/2015/: 2015_01.cpp  2015_01.h  2015_02.cpp  2015_02.h  2015_03.cpp  2015_03.h  2015_04.cpp  2015_04.h  2015_04_cuda.cpp  2015_04_cuda.h  2015_04_cuda_kernel.cu  2015_04_mt.cpp  2015_04_mt.h  2015_04_shared.h  2015_05.cpp  2015_05.h  2015_06.cpp  2015_06.h  2015_07.cpp  2015_07.h  2015_08.cpp  2015_08.h  2015_09.cpp  2015_09.h  2015_10.cpp  2015_10.h  2015_11.cpp  2015_11.h  2015_12.cpp  2015_12.h  2015_13.cpp  2015_13.h  2015_14.cpp  2015_14.h  2015_15.cpp  2015_15.h  2015_16.cpp  2015_16.h  2015_17.cpp  2015_17.h  (+21 more)
sources/2016/: 2016_01.cpp  2016_01.h  2016_02.cpp  2016_02.h  2016_03.cpp  2016_03.h  2016_04.cpp  2016_04.h  2016_05.cpp  2016_05.h  2016_06.cpp  2016_06.h  2016_07.cpp  2016_07.h  2016_08.cpp  2016_08.h  2016_09.cpp  2016_09.h  2016_10.cpp  2016_10.h  2016_11.cpp  2016_11.h  2016_12.cpp  2016_12.h  2016_13.cpp  2016_13.h  2016_14.cpp  2016_14.h  2016_15.cpp  2016_15.h  2016_16.cpp  2016_16.h  2016_17.cpp  2016_17.h  2016_18.cpp  2016_18.h  2016_19.cpp  2016_19.h  2016_19_magic.cpp  2016_19_magic.h  (+6 more)
sources/2017/: 2017_01.cpp  2017_01.h  2017_02.cpp  2017_02.h  2017_03.cpp  2017_03.h  2017_04.cpp  2017_04.h  2017_05.cpp  2017_05.h  2017_06.cpp  2017_06.h  2017_07.cpp  2017_07.h  2017_08.cpp  2017_08.h  2017_09.cpp  2017_09.h  2017_10.cpp  2017_10.h  2017_11.cpp  2017_11.h  2017_12.cpp  2017_12.h  2017_13.cpp  2017_13.h  2017_14.cpp  2017_14.h  2017_15.cpp  2017_15.h  2017_16.cpp  2017_16.h  2017_17.cpp  2017_17.h  2017_18.cpp  2017_18.h  2017_19.cpp  2017_19.h  2017_20.cpp  2017_20.h  (+14 more)
sources/2018/: 2018_01.cpp  2018_01.h  2018_02.cpp  2018_02.h  2018_03.cpp  2018_03.h  2018_04.cpp  2018_04.h  2018_05.cpp  2018_05.h  2018_06.cpp  2018_06.h  2018_07.cpp  2018_07.h  2018_08.cpp  2018_08.h  2018_09.cpp  2018_09.h  2018_10.cpp  2018_10.h  2018_11.cpp  2018_11.h  (+22 more)
test/: test.md
windows/: 2015.vcxproj  2015.vcxproj.filters  2015_with_CUDA.vcxproj  2015_with_CUDA.vcxproj.filters  2016.vcxproj  2016.vcxproj.filters  2017.vcxproj  2017.vcxproj.filters  2018.vcxproj  2018.vcxproj.filters  2019.vcxproj  2019.vcxproj.filters  2020.vcxproj  2020.vcxproj.filters  2021.vcxproj  2021.vcxproj.filters  2022.vcxproj  2022.vcxproj.filters  2023.filters  2023.vcxproj  2023.vcxproj.filters  2024.vcxproj  2024.vcxproj.filters  AoC.sln  AoC_with_CUDA.sln  README.md
(+324 files in other folders)
